Home page -in progress

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./assets/scss/buttons.scss";
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  box-sizing: border-box;
+  background-color: aliceblue;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
