--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -29,7 +29,7 @@
         }
 
         &:last-child {
-          @extend .blue-rounded;
+          @extend .blue-rounded-element;
         }
       }
     }
