--- a/src/app/views/home/tabs/general/general.component.html
+++ b/src/app/views/home/tabs/general/general.component.html
@@ -20,9 +20,11 @@
     class="home-page--description"
     [innerText]="translatePrefix + 'description' | translate"
   ></p>
-  <button class="home-page--button" routerLink="/login">
-    <span [innerText]="translatePrefix + 'joinUs' | translate"></span>
-  </button>
+  <app-button
+    class="home-page--button"
+    routerLink="/login"
+    [innerText]="translatePrefix + 'joinUs' | translate"
+  />
   <div class="home-page--footer">
     <p [innerHTML]="translatePrefix + 'copyright' | translate"></p>
   </div>
