--- a/src/app/views/home/tabs/login-register/login-register.component.html
+++ b/src/app/views/home/tabs/login-register/login-register.component.html
@@ -29,6 +29,7 @@
     </form>
     <app-button
       class="login-component--submit"
+      [disabled]="!pageTypeLogin"
       [title]="
         translatePrefix.common + (pageTypeLogin ? 'login' : 'register')
           | translate
