--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -1,5 +1,5 @@
 @import "./../../../../assets/scss/variables";
-@import "./../../../../assets/scss/buttons";
+@import "./../../../../assets/scss/global-styles";
 
 .default {
   &.mat-mdc-unelevated-button {
