--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -1,5 +1,5 @@
 @use "./../../../assets/scss/variables";
-@use "./../../../assets/scss/buttons";
+@use "./../../../assets/scss/global-styles";
 
 .home {
   width: 100vw;
