--- a/src/app/views/home/tabs/general/general.component.scss
+++ b/src/app/views/home/tabs/general/general.component.scss
@@ -1,4 +1,4 @@
-@use "./../../../../../assets/scss/buttons";
+@use "./../../../../../assets/scss/global-styles";
 
 .backgroud {    
   position: absolute;
