--- a/src/app/views/home/tabs/login-register/login-register.component.html
+++ b/src/app/views/home/tabs/login-register/login-register.component.html
@@ -3,7 +3,7 @@
     <form [formGroup]="form">
       <h2 class="login-component--header">
         {{
-          translatePrefix.common + (pageTypeLogin ? "login" : "createAccount")
+          (pageTypeLogin ? "loginRegister.login" : "loginRegister.createAccount")
             | translate
         }}
       </h2>
@@ -11,9 +11,9 @@
       @for (field of formConfig; track $index) {
         <app-input
           [placeholder]="
-            translatePrefix.placeholder + field.formControlName | translate
+            'loginRegister.form.placeholder.' + field.formControlName | translate
           "
-          [label]="translatePrefix.form + field.formControlName | translate"
+          [label]="'loginRegister.form.' + field.formControlName | translate"
           [formControlName]="field.formControlName"
           [type]="field.type ?? 'text'"
           ngDefaultControl
@@ -21,9 +21,7 @@
       }
       @if (pageTypeLogin) {
         <p>
-          <a [routerLink]="'/register'">{{
-            translatePrefix.common + "dontHaveAccountMessage" | translate
-          }}</a>
+          <a [routerLink]="'/register'">{{"loginRegister.dontHaveAccountMessage" | translate}}</a>
         </p>
       }
     </form>
@@ -31,7 +29,7 @@
       class="login-component--submit"
       [disabled]="!pageTypeLogin"
       [title]="
-        translatePrefix.common + (pageTypeLogin ? 'login' : 'register')
+        (pageTypeLogin ? 'loginRegister.login' : 'loginRegister.register')
           | translate
       "
       (click)="submitForm()"
