--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -2,9 +2,7 @@
 @use "./../../../assets/scss/global-styles";
 
 .home {
-  width: 100vw;
-  height: 100vh;
-  padding: 3rem 6rem;
+  padding: 1rem 6rem 0;
   box-sizing: border-box;
 
   .home-nav {
